plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'showroomz'
version = '0.0.1-SNAPSHOT'
description = 'board for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}
configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
	implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
	implementation 'software.amazon.awssdk:s3:2.20.26'
	implementation 'org.jsoup:jsoup:1.17.2'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'com.maxmind.geoip2:geoip2:4.4.0'
	/*implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'*/
	
	// Sentry SDK 추가
	implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.3.0'
	
	// Flyway 적용을 위한 의존성 추가
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
	
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// 통합 테스트 전용 인메모리 DB(MySQL 호환 모드). 실 MySQL 스키마 검증은 showroomz.DB.ShowroomzApplicationTests가 담당한다.
	testRuntimeOnly 'com.h2database:h2'
	
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests only.'
    group = 'verification'

    useJUnitPlatform {
        // 위에서 지정한 태그(@Tag("integration"))가 붙은 테스트만 실행
        includeTags 'integration'
    }

    // 테스트 결과를 일반 test 태스크와 분리해서 보고 싶다면 설정 (선택사항)
    testLogging {
        events "passed", "skipped", "failed"
    }
    
    // 이 태스크가 돌 때도 Flyway 검증 등을 위해 환경변수가 필요하다면 여기서 설정 가능
    // systemProperty 'spring.profiles.active', 'test' 
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}